--- a/synapsis/src/main/resources/templates/_layout.html
+++ b/synapsis/src/main/resources/templates/_layout.html
@@ -32,6 +32,7 @@
         }
     </script>
     <link rel="stylesheet" href="/css/styles.css">
+    <script type="text/javascript" src="/js/index.js"></script>
 </head>
 <body class="overflow-x-hidden">
 <div th:replace="fragments/navbar :: navbar"></div>
