--- a/synapsis/src/main/resources/templates/fragments/footer.html
+++ b/synapsis/src/main/resources/templates/fragments/footer.html
@@ -93,7 +93,10 @@
                 <a href="#">Community Guidelines</a>
             </div>
             <div class="flex-none font-light text-white text-xs mr-4">
-                <a href="#">English</a>
+                <select id="langSelector" name="language">
+                    <option value="EN">English</option>
+                    <option value="FR">French</option>
+                </select>
             </div>
         </div>
     </div>
