--- a/synapsis/src/main/resources/templates/fragments/navbar.html
+++ b/synapsis/src/main/resources/templates/fragments/navbar.html
@@ -1,5 +1,6 @@
 <!--    <nav class="flex-auto bg-white px-4 lg:px-2 py-6 fixed w-full z-20 items-center">-->
-
+<html xmlns:th="http://thymeleaf.org" xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="_layout">
 
 <div th:fragment="navbar" class="h-32">
     <!--Not logged in navbar-->
@@ -75,9 +76,23 @@
                         </li>
                     </a>
                     <a href="/user">
-                        <li class="flex flex-col items-center">
-                            <i class="fa-solid fa-user fa-2x h-10"></i>
-                            My Profile
+                        <li>
+                            <div class="relative group ">
+                                <i class="fa-solid fa-user fa-2x h-10"></i>
+                                <div class="flex flex-col items-center cursor-pointer text-md  border-b-0
+                                group-hover:border-grey-light  ">
+
+                                    Profile
+                                </div>
+                                <div class="items-center absolute border border-t-0 w-32 bg-neutral-100 rounded-lg  invisible group-hover:visible">
+                                    <br>
+                                    <hr class="border-t border-grey-light text-center">
+                                    <p th:text="${error}"></p>
+                                    <form th:action="@{/logout}" method="post" class="text-center">
+                                        <input type="submit" value="Log out"/>
+                                    </form>
+                                </div>
+                            </div>
                         </li>
                     </a>
                 </ul>
