--- a/synapsis/src/main/resources/templates/fragments/navbar.html
+++ b/synapsis/src/main/resources/templates/fragments/navbar.html
@@ -45,7 +45,7 @@
             </a>
             <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
                 <ul class="flex flex-col justify-between p-4 mt-4 md:flex-row md:space-x-6 md:mt-0 text-lg font-light text-black w-[1000px]">
-                    <a href="#" aria-current="page">
+                    <a href="/" aria-current="page">
                         <li class="flex flex-col items-center">
                             <i class="fa-solid fa-house fa-2x h-10"></i>
                             Home
